contrast error fixed

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -188,7 +188,7 @@ h2{
     opacity: 90%;
     font-family: var(--titles);
     font-size: 1.3rem;
-    color: var(--second-color);
+    color: var(--main-color);
     background-color: var(--fifth-color);
     letter-spacing: 1px;
     text-decoration: none;
@@ -196,7 +196,7 @@ h2{
 .call-action:hover {
     font-size: larger;
     background-color: var(--main-color);
-    color: var(--fourth-color);
+    color: white;
 }
 .call-action:hover a {
     color: var(--third-color);
@@ -235,7 +235,7 @@ h2{
     font-family: var(--subtitles);
     font-size: 2rem;
     letter-spacing: 1px;
-    color: var(--third-color);
+    color: #106492;
 }
 .spotlights img{
     width: 100%;
